add demo example

--- a/index.html
+++ b/index.html
@@ -190,7 +190,11 @@ var PROJECTS = [
     <script src="js/templ.js"></script>
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
+
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/install.js"></script>
+    <script src="js/sortable.js"></script>
+    <link rel="stylesheet" href="css/sortable-theme-minimal.css" />
 
     <script>
         var x = tmpl("row_tmpl", {});
