add more things

--- a/index.html
+++ b/index.html
@@ -129,11 +129,163 @@ var PROJECTS = [
         'dateStarted': '2015',
         'category': 'Personal',
     },
-    // {
-    //     'name': 'Bitcoin Shovels',
-    //     'description': 'A landing page joke site for bitcoin, selling shovels',
-    //     ''
-    // }
+    {
+        'name': 'Bitcoin Shovels',
+        'description': 'A landing page joke site for bitcoin, selling shovels (previously at bitcoinshovels.com',
+        'link': 'http://thekeesh.com/bitcoinshovels/',
+        'status': 'Not Active',
+        'dateStarted': '2014',
+        'category': 'Comedy',
+        'source': 'https://github.com/jkeesh/bitcoin-shovels',
+    },
+    {
+        'name': 'Stanford Flipside',
+        'description': 'Satirical newspaper for Stanford University in the style of The Onion.',
+        'link': 'http://stanfordflipside.com',
+        'status': 'Active',
+        'dateStarted': '2008',
+        'category': 'Flipside',
+    },
+    {
+        'name': 'DHS Flipside',
+        'description': 'Satirical newspaper for Deerfield High School in the style of The Onion.',
+        'link': 'http://dhsflipside.com',
+        'status': 'Active',
+        'dateStarted': '2005',
+        'category': 'Flipside',
+    },
+    {
+        'name': 'Flipside News',
+        'description': 'Informational site for the Flipside satirical newspapers',
+        'link': 'http://flipsidenews.com',
+        'status': 'Active',
+        'dateStarted': '2008',
+        'category': 'Flipside',
+    },
+    {
+        'name': 'Flipside Convention',
+        'description': 'Informational site for the Flipside 10 year convention',
+        'link': 'http://flipideconvention.com',
+        'status': 'Active',
+        'dateStarted': '2015',
+        'category': 'Flipside',
+    },
+    {
+        'name': 'SCPD Scraper',
+        'description': 'Tool to scrape lecture videos for SCPD',
+        'link': 'x',
+        'status': '??',
+        'dateStarted': '??',
+        'source': 'https://github.com/jkeesh/scpd-scraper',
+    },
+    {
+        'name': 'Citation Missing',
+        'description': 'Project for comedy hackathon to easily edit wikipedia pages',
+        'link': 'x',
+        'status': 'x',
+        'source': 'https://github.com/jkeesh/citation-missing',
+        'category': 'Comedy',
+    },
+    {
+        'name': 'YouTube Sloth',
+        'description': 'Take any youtube video and slow it down, simulating viewing it on a slow network',
+        'status': 'x',
+        'link': 'http://thekeesh.com/ytsloth',
+        'category': 'Comedy',
+    },
+    {
+        'name': 'Your Money or Your Life Crossover Visualization',
+        'description': 'Interactive visualization of investment income crossover point using Your Money or Your Life',
+        'link': 'http://thekeesh.com/ymoyl',
+        'source': 'https://github.com/jkeesh/crossover',
+        'dateStarted': '2015',
+        'category': 'Finance',
+        'status': 'Active',
+    },
+    {
+        'name': 'Jumble Maker',
+        'description': 'A tool to help create jumbles for the Flipside',
+        'link': 'http://thekeesh.com/jumblemaker/',
+        'source': 'https://github.com/jkeesh/JumbleMaker',
+        'status': 'Active',
+        'category': 'Flipside',
+        'dateStarted': '2012',
+    },
+    {
+        'name': 'Where is the 1%?',
+        'description': 'A map visualizing median incomes across the US using D3',
+        'link': 'http://thekeesh.com/onepercent/',
+        'status': 'Active',
+        'source': 'https://github.com/jkeesh/onepercent',
+        'category': 'School Projects',
+        'dateStarted': '2011',
+    },
+    {
+        'name': 'Jitterbunk',
+        'description': 'A site where you can bunk your friends',
+        'link': 'http://jitterbunk.com',
+        'status': 'Not Active',
+        'source': 'https://github.com/jkeesh/jitterbunk',
+        'category': 'Comedy',
+        'dateStarted': '2011'
+    },
+    {
+        'name': 'Cryptogram Maker',
+        'description': 'Let you easily make cryptograms',
+        'source': 'https://github.com/jkeesh/CryptogramMaker',
+        'link': 'http://thekeesh.com/cryptogram/',
+        'status': 'Active',
+        'category': 'Flipside',
+        'dateStarted': '2012',
+    },
+    {
+        'name': 'Paperless',
+        'description': 'A code commenting and review project for the Stanford CS106 program',
+        'source': 'https://github.com/jkeesh/paperless',
+        'link': 'http://paperless.stanford.edu/',
+        'status': 'Active',
+        'dateStarted': '2010'
+    },
+    {
+        'name': 'Study Guide Generator',
+        'description': 'Enter a list of words and get definitions from Wikipedia',
+        'source': 'x',
+        'link': 'http://thekeesh.com/study/',
+        'status': 'Active',
+        'dateStarted': 'x',
+    },
+    {
+        'name': 'Mission Tacos',
+        'description': 'Let you see and rate all of the taco places in the Mission in San Francisco',
+        'source': 'https://github.com/jkeesh/mission-tacos',
+        'link': 'http://missiontacos.com',
+        'status': 'Not Active',
+        'dateStarted': '2013',
+    },
+    {
+        'name': 'Visualize Friends',
+        'description': 'Tool to let you see changes in your Facebook friends',
+        'source': 'http://github.com/jkeesh/friends',
+        'link': 'x',
+        'status': 'Not Active',
+        'dateStarted': '2013',
+    },
+    {
+        'name': 'Popular Site Template',
+        'description': 'Lets you make your own popular sites a la FMyLife and MyLifeIsAverage',
+        'source': 'https://github.com/jkeesh/popularsitetemplate',
+        'link': 'x',
+        'status': 'Not Active',
+        'dateStarted': '2010',
+    },
+    {
+        'name': 'Best to Top',
+        'description': 'A tool for brainstorming',
+        'source': 'https://github.com/jkeesh/besttotop',
+        'link': 'http://besttotop.appspot.com/',
+        'status': 'Not Active',
+        'dateStarted': '2011',
+    }
 
 ];
 
@@ -149,9 +301,9 @@ var PROJECTS = [
 <table class="table table-striped">
 
 <tr>
+    <th>#</th>
     <th class="name-col">Name</th>
     <th class="desc-col">Description</th>
-    <th>Link</th>
     <th>Status</th>
     <th>Source</th>
     <th>Date Started</th>
@@ -161,13 +313,14 @@ var PROJECTS = [
 <script type="text/html" id="row_tmpl">
   <% for ( var i = 0; i < PROJECTS.length; i++ ) { %>
     <tr>
-        <td><%= PROJECTS[i].name %></td>
-        <td><%= PROJECTS[i].description %></td>
+        <td><%= i %></td>
         <td>
             <a target="_blank" href="<%= PROJECTS[i].link %>">
-                Link
+                <%= PROJECTS[i].name %>
             </a>
         </td>
+        <td><%= PROJECTS[i].description %></td>
+
         <td class="<%= 5 %>">
             <%= PROJECTS[i].status %>
         </td>
