--- a/index.html
+++ b/index.html
@@ -285,6 +285,119 @@ var PROJECTS = [
         'link': 'http://besttotop.appspot.com/',
         'status': 'Not Active',
         'dateStarted': '2011',
+    },
+    {
+        'name': 'Biology Project',
+        'description': 'Ecosystem project for sophomore in high school biology class',
+        'source': 'x',
+        'link': 'http://thekeesh.com/biofinal/',
+        'status': 'Active',
+        'dateStarted': '2005',
+        'category': 'School Project',
+    },
+    {
+        'name': 'Paperless 2',
+        'description': 'Feedback tool for Stanford CS107, lightweight text-based tool inspired by paperless',
+        'source': 'https://github.com/jkeesh/paperless2',
+        'link': '#',
+        'status': 'Not Active',
+        'dateStarted': '2012',
+        'category': 'Stanford',
+    },
+    {
+        'name': 'Mutual Friends',
+        'description': 'Discover who you have the most mutual friends with on Facebook',
+        'source': 'https://github.com/jkeesh/mutual-friends',
+        'link': '#',
+        'status': 'Not Active',
+        'dateStarted': '2012',
+    },
+    {
+        'name': 'QuestionHut',
+        'description': 'Open source question and answer tool for classes',
+        'source': 'https://github.com/jkeesh/QuestionHut',
+        'link': 'http://questionhut.com',
+        'status': 'Not Active',
+        'dateStarted': '2011'
+    },
+    {
+        'name': 'Contacts',
+        'description': 'Tool to manage contacts',
+        'source': 'https://github.com/jkeesh/contacts',
+        'link': '#',
+        'status': 'Not Active',
+        'dateStarted': '2012'
+    },
+    {
+        'name': 'Jeremy\'s List',
+        'description': 'Site to post open apartments and jobs a la craigslist, but for people who know Jeremy',
+        'source': 'x',
+        'link': 'http://jeremyslist.com',
+        'status': 'Not Active',
+        'dateStarted': '2014'
+    },
+    {
+        'name': 'Facebook Status Gender Classifier and Generator',
+        'description': 'Machine learning algorithm tries to guess if the facebook status you type is from a guy or girl',
+        'link': 'http://thekeesh.com/cs224n',
+        'source': 'x',
+        'category': 'School Project',
+        'status': 'Active',
+    },
+    {
+        'name': 'Type Shift Code',
+        'description': 'Shift your hands over one key right and encode and decode messages',
+        'link': 'http://thekeesh.com/typeshift/',
+        'source': 'x',
+        'status': 'Active',
+    },
+    {
+        'name': 'Lovescore with Bump',
+        'description': 'Find out how compatible you are with your friends! Just bump your friends to find out your lovescore!',
+        'link': 'http://itunes.apple.com/gb/app/lovescore-with-bump/id363350712?mt=8',
+        'status': 'Not Active',
+        'dateStarted': '2010',
+        'category': 'iPhone Apps',
+    },
+    {
+        'name': 'Stanford Flipside for iPhone',
+        'description': 'iPhone app to read the Stanford Flipside',
+        'link': 'http://itunes.apple.com/us/app/the-stanford-flipside/id362038270?mt=8',
+        'status': 'Not Active',
+        'dateStarted': '2010',
+        'category': 'iPhone Apps',
+    },
+    {
+        'name': 'Northwestern Flipside for iPhone',
+        'description': 'iPhone app to read the Northwestern Flipside',
+        'link': 'http://itunes.apple.com/us/app/the-northwestern-flipside/id392581634?mt=8',
+        'status': 'Not Active',
+        'dateStarted': '2010',
+        'category': 'iPhone Apps',
+    },
+    {
+        'name': 'DHS Flipside Flipside for iPhone',
+        'description': 'iPhone app to read the DHS Flipside',
+        'link': 'http://itunes.apple.com/us/app/the-dhs-flipside/id392228545?mt=8',
+        'status': 'Not Active',
+        'dateStarted': '2010',
+        'category': 'iPhone Apps',
+    },
+    {
+        'name': 'FormulaHelp',
+        'description': 'FormulaHelp allows you to solve the quadratic equation, distance formula, and find the area and volume of many 2D and 3D objects.',
+        'link': 'http://itunes.apple.com/us/app/formulahelp/id354916594?mt=8',
+        'status': 'Active',
+        'dateStarted': '2010',
+        'category': 'iPhone Apps',
+    },
+    {
+        'name': 'ColorSearch',
+        'description': 'iPhone app to choose a simple rgb color',
+        'link': 'https://itunes.apple.com/us/app/colorsearch/id349852837?mt=8',
+        'status': 'Active',
+        'dateStarted': '2010',
+        'category': 'iPhone Apps',
     }
 
 ];
