update images for v1 of project list

--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
     <style>
     .project-image{
         width: 700px;
+        max-height: 300px;
+        overflow: hidden;
     }
     </style>
   </body>
